Fixed banner sizes and truncation of title for slider + Added border-radius for footer's button

--- a/agreGând/src/assets/styles/components/_banner.scss
+++ b/agreGând/src/assets/styles/components/_banner.scss
@@ -112,14 +112,18 @@
       &.wslider {
         flex-direction: row;
         padding-left: 30px;
+        gap: 1.5em;
       }
 
       .simple-text {
-        width: 20vw;
+        max-width: 20vw;
+        width: 18vw;
+        min-width: 15vw;
       }
 
       .slider {
         width: 60vw;
+        height: 4vh;
       }
     }
   }
