--- a/agreGând/src/assets/styles/components/_footer.scss
+++ b/agreGând/src/assets/styles/components/_footer.scss
@@ -65,6 +65,7 @@
           //min-height: 5vh;
           background-color: var(--albastru-cer);
           color: white;
+          border-radius: 2px;
 
           span {
             font: normal normal normal 23.540000000000003px / 1.4em
